// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthComponent should compile and show "Have an account?" link 1`] = `
<ng-component
  BASE_LOGIN_URL={[Function String]}
  BASE_REGISTER_URL={[Function String]}
  authErrors$={[Function Store]}
  authType$={[Function Observable]}
  isSubmitting$={[Function Store]}
  route={[Function MockRoute]}
  router={[Function Router]}
  store={[Function Store]}
  title$={[Function Observable]}
  unsubscribe$={[Function Subject]}
>
  <div
    class="auth-page page"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-md-6 offset-md-3 col-xs-12"
        >
          <h1>
            conduit.auth.sinup.title
          </h1>
          
          <p>
            
            <a
              href="/login"
              ng-reflect-link-params="/login"
              ng-reflect-router-link="/login"
            >
              conduit.auth.sinup.caption
            </a>
            
          </p>
          <app-list-error
            ng-reflect-errors="[object Object]"
          />
          <app-auth-from
            ng-reflect-auth-type="register"
            ng-reflect-is-submitting="false"
          >
            <div>
              a
            </div>
          </app-auth-from>
        </div>
      </div>
    </div>
  </div>
</ng-component>
`;

exports[`AuthComponent should compile and show "Need an account?" link 1`] = `
<ng-component
  BASE_LOGIN_URL={[Function String]}
  BASE_REGISTER_URL={[Function String]}
  authErrors$={[Function Store]}
  authType$={[Function Observable]}
  isSubmitting$={[Function Store]}
  route={[Function MockRoute]}
  router={[Function Router]}
  store={[Function Store]}
  title$={[Function Observable]}
  unsubscribe$={[Function Subject]}
>
  <div
    class="auth-page page"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-md-6 offset-md-3 col-xs-12"
        >
          <h1>
            conduit.auth.sigin.title
          </h1>
          
          <p>
            
            
            <a
              href="/register"
              ng-reflect-link-params="/register"
              ng-reflect-router-link="/register"
            >
              conduit.auth.sigin.caption
            </a>
          </p>
          <app-list-error
            ng-reflect-errors="[object Object]"
          />
          <app-auth-from
            ng-reflect-auth-type="login"
            ng-reflect-is-submitting="false"
          >
            <div>
              a
            </div>
          </app-auth-from>
        </div>
      </div>
    </div>
  </div>
</ng-component>
`;
